# treest

./: .gitignore  .mailmap  CHANGELOG.md  CMakeLists.txt  CODEOWNERS  LICENSE  README.md
include/: binary_tree.hpp  common_tree.hpp  dfs_iterator.hpp  flat_node.hpp  flat_tree_iterator.hpp  iterator.hpp  iterator_impl.hpp  node.hpp  node_interface.hpp  tree.hpp  tree_impl.hpp
include/digraph/: digraph.hpp  digraph_node.hpp  lightweight_digraph.hpp
include/digraph_impl/: digraph_impl.hpp  digraph_node_impl.hpp
include/flat_tree/: flat_tree.hpp  flat_tree_iterator.hpp  flat_tree_node.hpp  flat_tree_variant.hpp  preorder_iterator.hpp  type_traits.hpp
include/graph/: graph.hpp  graph_impl.hpp  graph_node.hpp  graph_template.hpp  node.hpp  node_template.hpp
include/graph/lightweight/: lightweight_graph.hpp
include/graph_impl/: graph_impl.hpp  graph_interface.hpp  graph_template.hpp  node_impl.hpp  node_interface.hpp  vec_node_impl copy.hpp  vec_node_impl.hpp
include/graph_template/: graph_template.hpp  node_template.hpp
include/iterators/: const_iterator.hpp  const_iterator_impl.hpp  dfs_iterator.hpp  iterator.hpp
include/lightweight_digraph/: lightweight_digraph.hpp
include/lightweight_graph/: lightweight_graph.hpp  lightweight_graph_node.hpp
include/lightweight_tree/: lightweight_tree.hpp  lightweight_tree_node.hpp  type_traits.hpp
include/lightweight_tree/iterators/: preorder_iterator.hpp
include/smart_tree/: smart_tree_node.hpp
include/smart_tree/iterators/: base_iterator.hpp  bfs_iterator.hpp  postorder_iterator.hpp
include/tree/: lightweight_tree.hpp  smart_tree.hpp  tree.hpp  tree_node.hpp  tree_template.hpp  tree_variant.hpp  type_traits.hpp
include/tree/iterators/: base_iterator.hpp  bfs_iterator.hpp  postorder_iterator.hpp  preorder_iterator.hpp  tree_iterator.hpp
include/tree_types/: array_node.hpp  binary_node.hpp  binary_tree.hpp  container_node.hpp  custom_node.hpp  deque_node.hpp  deque_tree.hpp  dfs_iterator.hpp  generic_node.hpp  generic_tree.hpp  list_node.hpp  list_tree.hpp  node_interface.hpp  vector_node.hpp  vector_tree.hpp
old_tests/: test_float.cpp  test_int.cpp  test_node.cpp
old_tests/iterators/: iterator_fixture.h  test_const_iterator.cpp
tests/: CMakeLists.txt  templates.hpp  test_array_tree.cpp  test_binary_tree.cpp  test_deque_tree.cpp  test_fixture.hpp  test_flat_tree.cpp  test_float.cpp  test_graph.cpp  test_int.cpp  test_iterator.cpp  test_iterators.cpp  test_list_tree.cpp  test_node.cpp  test_tree.cpp  test_vector_tree.cpp
tests/c++11/: CMakeLists.txt
tests/c++11/binary_tree/: binary_tree_test_fixture.hpp  test_binary_tree.cpp  test_binary_tree_iterators.cpp  test_fixture.hpp
tests/c++11/lightweight_digraph/: test_lightweight_digraph.cpp
tests/c++11/lightweight_graph/: test_lightweight_graph.cpp
tests/c++11/lightweight_tree/: test_fixture.hpp  test_iterators.cpp  test_tree.cpp  test_tree_node.cpp
tests/c++11/smart_tree/: test_smart_tree.cpp  test_smart_tree_node.cpp
tests/c++17/: CMakeLists.txt
tests/c++17/lightweight_digraph/: test_lightweight_digraph.cpp
tests/c++17/lightweight_graph/: test_lightweight_graph.cpp
tests/c++17/lightweight_tree/: test_lightweight_tree_node.cpp
tests/c++17/smart_tree/: smart_tree_test_fixture.hpp  test_smart_tree.cpp  test_smart_tree_node.cpp
tests/digraph/: test_digraph.cpp  test_digraph_node.cpp
tests/graph/: test_graph.cpp  test_node.cpp
tests/iterators/: iterator_fixture.h  test_const_iterator.cpp  test_iterator.cpp
tests/lightweight_graph/: test_lightweight_graph.cpp  test_lightweight_graph_node.cpp
tests/lightweight_tree/: test_iterators.cpp  test_tree.cpp
tests/smart_tree/: test_smart_tree.cpp  test_smart_tree_iterators.cpp  test_smart_tree_node.cpp
tests/tree/: test_fixture.hpp  test_iterators.cpp  test_tree.cpp  test_tree_node.cpp
(+8 files in other folders)
